--- a/obya/web/site/theme/templates/base.html
+++ b/obya/web/site/theme/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Slurpy</title>
+    <title>OBYA</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{{url_static}}/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -23,16 +23,13 @@
     <!-- Custom Fonts -->
     <link href="{{url_static}}/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- Slurpy CSS -->
-    <link href="{{url_static}}/slurpy/css/charts.css" rel="stylesheet" type="text/css">
-    <link href="{{url_static}}/slurpy/css/tables.css" rel="stylesheet" type="text/css">
+    <!-- Application CSS -->
+    <link href="{{url_static}}/obya/css/charts.css" rel="stylesheet" type="text/css">
+    <link href="{{url_static}}/obya/css/tables.css" rel="stylesheet" type="text/css">
 
     <!-- Load javascript files -->
-    <script type="text/javascript" src="{{url_static}}/slurpy/js/d3.v4.min.js"></script>
-    <script type="text/javascript" src="{{url_static}}/slurpy/js/charts.js"></script>
-    <script type="text/javascript" src="{{url_static}}/slurpy/js/charts-pdu-panel.js"></script>
-    <script type="text/javascript" src="{{url_static}}/slurpy/js/charts-oid-current.js"></script>
-    <script type="text/javascript" src="{{url_static}}/slurpy/js/charts-datacenter.js"></script>
+    <script type="text/javascript" src="{{url_static}}/obya/js/d3.v4.min.js"></script>
+    <script type="text/javascript" src="{{url_static}}/obya/js/charts.js"></script>
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -52,7 +49,7 @@
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
 
-                <a class="navbar-brand" href="{{url_home}}/"><img src="{{url_static}}/images/colovore-logo.png"></a>
+                <a class="navbar-brand" href="{{url_home}}/"><img src="{{url_static}}/obya/images/logo.png"></a>
 
             </div>
 
