--- a/obya/web/site/theme/templates/base.html
+++ b/obya/web/site/theme/templates/base.html
@@ -29,7 +29,7 @@
 
     <!-- Load javascript files -->
     <script type="text/javascript" src="{{url_static}}/obya/js/d3.v4.min.js"></script>
-    <script type="text/javascript" src="{{url_static}}/obya/js/charts.js"></script>
+    <script type="text/javascript" src="{{url_static}}/obya/js/chart-basic.js"></script>
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -53,7 +53,7 @@
 
             </div>
 
-            <ul class="nav navbar-top-links navbar-left">
+            <!-- <ul class="nav navbar-top-links navbar-left">
 
                 <li>
                     <a href="{{url_home}}/"><i class="fa fa-home fa-fw"></i> SLURPY Home</a>
@@ -66,10 +66,9 @@
                     <ul class="dropdown-menu dropdown-user">
 			{{dc_menu|safe}}
                     </ul>
-                    <!-- /.dropdown-user -->
                 </li>
 
-            </ul>
+            </ul> -->
 
         </nav>
 
