--- a/obya/web/site/theme/templates/index.html
+++ b/obya/web/site/theme/templates/index.html
@@ -12,7 +12,7 @@
       <div class="col-lg-6">
           <div class="panel panel-default">
               <div class="panel-heading">
-                  Customers
+                  Pairs
               </div>
               <!-- /.panel-heading -->
               <div class="panel-body">
